--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,7 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - unless: # README.md以外のファイルが更新されたら実行
-        condition: << pipeline.parameters.readme-changed >
-        steps:
-          - run:
-              name: Hello World
-              command: echo "Hello World!"
+      - run:
+          name: Hello World
+          command: echo "Hello World!"
+          unless: << pipeline.parameters.readme-changed >> # README.md以外のファイルが更新されたら実行
