--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,24 +10,4 @@ workflows:
       - path-filtering/filter:
           mapping: |
             README.md readme-changed true
-          config-path: .circleci/config.yml
-      - hello-world:
-          requires:
-            - path-filtering/filter
-
-parameters:
-  readme-changed:
-    type: boolean
-    default: false
-
-jobs:
-  hello-world:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - unless: # README.md以外のファイルが更新されたら実行
-          condition: << pipeline.parameters.readme-changed >>
-          steps:
-            - run:
-                name: Hello World
-                command: echo "Hello World!" 
+          config-path: .circleci/dynamic-config.yml
