--- a/.circleci/dynamic-config.yml
+++ b/.circleci/dynamic-config.yml
@@ -17,8 +17,8 @@ jobs:
                 name: Hello World
                 command: echo "Hello World!"
 
-workflows:
-  hello-workflow:
-    when: << pipeline.parameters.readme-changed >>
-    jobs:
-      - hello-world:
+# workflows:
+#   hello-workflow:
+#     when: << pipeline.parameters.readme-changed >>
+#     jobs:
+#       - hello-world:
